# Sentri

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: api_urls.py  api_views.py  auth_backends.py  authentication.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_account_locked_until_user_created_at_and_more.py  0003_user_compromise_reason_user_compromised_at_and_more.py  0004_alter_user_last_login_user_agent.py
accounts/services/: __init__.py  security.py  verification.py
accounts/templates/registration/: login.html  signup.html
accounts/utils/: ip.py
apikeys/: api_urls.py  api_views.py  authentication.py  limits.py  middleware.py  models.py  permissions.py  serializers.py  views.py
apikeys/migrations/: 0001_initial.py  0002_apikey_expires_at.py
apikeys/services/: __init__.py  api_key.py  rate_limit.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: overview.html
docs/: api.md
logs/: constants.py  middleware.py  models.py  views.py
logs/migrations/: 0001_initial.py  0002_alter_auditlog_action.py
logs/services/: audit.py
security/: admin_urls.py  admin_views.py  api_urls.py  api_views.py  models.py  permissions.py  serializers.py
security/migrations/: 0001_initial.py  0002_alter_securityevent_event_type.py
security/services/: __init__.py  compromise.py  event.py  remediation.py
sentri/: api_urls.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
sentri/templates/sentri/: base.html  home.html  landing.html
(+4 files in other folders)
